kubernetes/local/spark-master-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: spark-master
spec:
  replicas: 1
  selector:
    matchLabels:
      component: spark-master
  template:
    metadata:
      labels:
        component: spark-master
    spec:
      containers:
        - name: spark-master
          image: spark-hadoop:3.2.0
          imagePullPolicy: Never
          command: ["/bin/bash"]
          args: ["spark-master"]
          ports:
            - containerPort: 7077
            - containerPort: 8080
