kubernetes/local/spark-worker-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: spark-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      component: spark-worker
  template:
    metadata:
      labels:
        component: spark-worker
    spec:
      containers:
        - name: spark-worker
          image: spark-hadoop:3.2.0
          imagePullPolicy: Never
          command: ["/bin/bash"]
          args: ["spark-worker"]
          ports:
            - containerPort: 8081
