kubernetes/local/spark-master-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: spark-master
spec:
  ports:
    - name: webui
      port: 8080
      targetPort: 8080
    - name: spark
      port: 7077
      targetPort: 7077
    - name: hadoop-webui
      port: 9000
      targetPort: 9000
    - name: ssh
      port: 22
      targetPort: 22
    - name: hadoop
      port: 8088
      targetPort: 8088
    - name: spark-log
      port: 18080
      targetPort: 18080
  selector:
    component: spark-master
